--- a/makefile.vc
+++ b/makefile.vc
@@ -12,7 +12,7 @@
 !include <win32.mak>
 
 # You may want to adjust these compiler options:
-CFLAGS= $(cflags) $(cdebug) $(cvars) -I. /MD
+CFLAGS= $(cflags) $(cdebug) $(cvars) -I.
 # Generally, we recommend defining any configuration symbols in jconfig.h,
 # NOT via -D switches here.
 
@@ -59,21 +59,21 @@ DOCS= README install.txt usage.txt cjpeg.1 djpeg.1 jpegtran.1 rdjpgcom.1 \
         coderules.txt filelist.txt change.log
 MKFILES= configure Makefile.in makefile.ansi makefile.unix makefile.b32 \
         makefile.bcc makefile.mc6 makefile.dj makefile.wat makefile.vc \
-        makejdsw.vc6 makeadsw.vc6 makejdep.vc6 makejdsp.vc6 makejmak.vc6 \
-        makecdep.vc6 makecdsp.vc6 makecmak.vc6 makeddep.vc6 makeddsp.vc6 \
-        makedmak.vc6 maketdep.vc6 maketdsp.vc6 maketmak.vc6 makerdep.vc6 \
-        makerdsp.vc6 makermak.vc6 makewdep.vc6 makewdsp.vc6 makewmak.vc6 \
-        makejsln.v10 makeasln.v10 makejvcx.v10 makejfil.v10 makecvcx.v10 \
-        makecfil.v10 makedvcx.v10 makedfil.v10 maketvcx.v10 maketfil.v10 \
-        makervcx.v10 makerfil.v10 makewvcx.v10 makewfil.v10 makeproj.mac \
-        makcjpeg.st makdjpeg.st makljpeg.st maktjpeg.st makefile.manx \
-        makefile.sas makefile.mms makefile.vms makvms.opt
+        makefile.vs makejdsw.vc6 makeadsw.vc6 makejdep.vc6 makejdsp.vc6 \
+        makejmak.vc6 makecdep.vc6 makecdsp.vc6 makecmak.vc6 makeddep.vc6 \
+        makeddsp.vc6 makedmak.vc6 maketdep.vc6 maketdsp.vc6 maketmak.vc6 \
+        makerdep.vc6 makerdsp.vc6 makermak.vc6 makewdep.vc6 makewdsp.vc6 \
+        makewmak.vc6 makejsln.v15 makeasln.v15 makejvcx.v15 makejfil.v15 \
+        makecvcx.v15 makecfil.v15 makedvcx.v15 makedfil.v15 maketvcx.v15 \
+        maketfil.v15 makervcx.v15 makerfil.v15 makewvcx.v15 makewfil.v15 \
+        makeproj.mac makcjpeg.st makdjpeg.st makljpeg.st maktjpeg.st \
+        makefile.manx makefile.sas makefile.mms makefile.vms makvms.opt
 CONFIGFILES= jconfig.cfg jconfig.bcc jconfig.mc6 jconfig.dj jconfig.wat \
         jconfig.vc jconfig.mac jconfig.st jconfig.manx jconfig.sas \
         jconfig.vms
 CONFIGUREFILES= config.guess config.sub install-sh ltmain.sh depcomp \
         missing ar-lib
-OTHERFILES= jconfig.txt ckconfig.c jmemdosa.asm libjpeg.map
+OTHERFILES= jconfig.txt ckconfig.c jmemdosa.asm libjpeg.map libjpeg.pc.in
 TESTFILES= testorig.jpg testimg.ppm testimg.bmp testimg.jpg testprog.jpg \
         testimgp.jpg
 DISTFILES= $(DOCS) $(MKFILES) $(CONFIGFILES) $(SOURCES) $(INCLUDES) \
@@ -91,7 +91,7 @@ DLIBOBJECTS= jdapimin.obj jdapistd.obj jdarith.obj jdtrans.obj jdatasrc.obj \
         jdcoefct.obj jdpostct.obj jddctmgr.obj jidctfst.obj jidctflt.obj \
         jidctint.obj jdsample.obj jdcolor.obj jquant1.obj jquant2.obj \
         jdmerge.obj
-# These objectfiles are included in libjpeg_a.lib
+# These objectfiles are included in libjpeg.lib
 LIBOBJECTS= $(CLIBOBJECTS) $(DLIBOBJECTS) $(COMOBJECTS)
 # object files for sample applications (excluding library files)
 COBJECTS= cjpeg.obj rdppm.obj rdgif.obj rdtarga.obj rdrle.obj rdbmp.obj \
@@ -105,20 +105,20 @@ TROBJECTS= jpegtran.obj rdswitch.obj cdjpeg.obj transupp.obj
 	$(cc) $(CFLAGS) $*.c
 
 
-all: libjpeg_a.lib cjpeg.exe djpeg.exe jpegtran.exe rdjpgcom.exe wrjpgcom.exe
+all: libjpeg.lib cjpeg.exe djpeg.exe jpegtran.exe rdjpgcom.exe wrjpgcom.exe
 
-libjpeg_a.lib: $(LIBOBJECTS)
-	$(RM) libjpeg_a.lib
-	lib -out:libjpeg_a.lib  $(LIBOBJECTS)
+libjpeg.lib: $(LIBOBJECTS)
+	$(RM) libjpeg.lib
+	lib -out:libjpeg.lib  $(LIBOBJECTS)
 
-cjpeg.exe: $(COBJECTS) libjpeg_a.lib
-	$(link) $(LDFLAGS) -out:cjpeg.exe $(COBJECTS) libjpeg_a.lib $(LDLIBS)
+cjpeg.exe: $(COBJECTS) libjpeg.lib
+	$(link) $(LDFLAGS) -out:cjpeg.exe $(COBJECTS) libjpeg.lib $(LDLIBS)
 
-djpeg.exe: $(DOBJECTS) libjpeg_a.lib
-	$(link) $(LDFLAGS) -out:djpeg.exe $(DOBJECTS) libjpeg_a.lib $(LDLIBS)
+djpeg.exe: $(DOBJECTS) libjpeg.lib
+	$(link) $(LDFLAGS) -out:djpeg.exe $(DOBJECTS) libjpeg.lib $(LDLIBS)
 
-jpegtran.exe: $(TROBJECTS) libjpeg_a.lib
-	$(link) $(LDFLAGS) -out:jpegtran.exe $(TROBJECTS) libjpeg_a.lib $(LDLIBS)
+jpegtran.exe: $(TROBJECTS) libjpeg.lib
+	$(link) $(LDFLAGS) -out:jpegtran.exe $(TROBJECTS) libjpeg.lib $(LDLIBS)
 
 rdjpgcom.exe: rdjpgcom.obj
 	$(link) $(LDFLAGS) -out:rdjpgcom.exe rdjpgcom.obj $(LDLIBS)
@@ -128,7 +128,7 @@ wrjpgcom.exe: wrjpgcom.obj
 
 
 clean:
-	$(RM) *.obj *.exe libjpeg_a.lib
+	$(RM) *.obj *.exe libjpeg.lib
 	$(RM) testout*
 
 setup-vc6:
@@ -154,22 +154,22 @@ setup-vc6:
 	ren makewdep.vc6 wrjpgcom.dep
 	ren makewdsp.vc6 wrjpgcom.dsp
 
-setup-v10:
+setup-v15:
 	ren jconfig.vc jconfig.h
-	ren makejsln.v10 jpeg.sln
-	ren makeasln.v10 apps.sln
-	ren makejvcx.v10 jpeg.vcxproj
-	ren makejfil.v10 jpeg.vcxproj.filters
-	ren makecvcx.v10 cjpeg.vcxproj
-	ren makecfil.v10 cjpeg.vcxproj.filters
-	ren makedvcx.v10 djpeg.vcxproj
-	ren makedfil.v10 djpeg.vcxproj.filters
-	ren maketvcx.v10 jpegtran.vcxproj
-	ren maketfil.v10 jpegtran.vcxproj.filters
-	ren makervcx.v10 rdjpgcom.vcxproj
-	ren makerfil.v10 rdjpgcom.vcxproj.filters
-	ren makewvcx.v10 wrjpgcom.vcxproj
-	ren makewfil.v10 wrjpgcom.vcxproj.filters
+	ren makejsln.v15 jpeg.sln
+	ren makeasln.v15 apps.sln
+	ren makejvcx.v15 jpeg.vcxproj
+	ren makejfil.v15 jpeg.vcxproj.filters
+	ren makecvcx.v15 cjpeg.vcxproj
+	ren makecfil.v15 cjpeg.vcxproj.filters
+	ren makedvcx.v15 djpeg.vcxproj
+	ren makedfil.v15 djpeg.vcxproj.filters
+	ren maketvcx.v15 jpegtran.vcxproj
+	ren maketfil.v15 jpegtran.vcxproj.filters
+	ren makervcx.v15 rdjpgcom.vcxproj
+	ren makerfil.v15 rdjpgcom.vcxproj.filters
+	ren makewvcx.v15 wrjpgcom.vcxproj
+	ren makewfil.v15 wrjpgcom.vcxproj.filters
 
 test:
 	IF EXIST testout* $(RM) testout*
