Fix missing debugging information
When building a static libjpeg for 8 bits, functions for 12 and 16 bits
are put in the library as well (for whatever reasons).  However, for
RelWithDebInfo builds, these objects store the debug info in separate
PDBs, but we don't ship these PDBs.  But even if we did, PHP's build
system wouldn't properly handle them, since it expects the basenames
of the .lib and the .pdb to match.

To work around this, we adjust the names of the PDBs in the first
place.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -671,6 +671,8 @@ if(ENABLE_STATIC)
     set_target_properties(jpeg-static PROPERTIES OUTPUT_NAME jpeg)
   else()
     set_target_properties(jpeg-static PROPERTIES OUTPUT_NAME libjpeg_a)
+    set_target_properties(jpeg12-static PROPERTIES COMPILE_PDB_NAME libjpeg_a)
+    set_target_properties(jpeg16-static PROPERTIES COMPILE_PDB_NAME libjpeg_a)
   endif()
 endif()
 
